--- a/2304_apptalk/source/css/common.css
+++ b/2304_apptalk/source/css/common.css
@@ -636,6 +636,7 @@ container
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
+  height: 100%;
   min-height: 64px;
   padding: 8px 0;
   border: 1px solid #00f;
