--- a/2304_apptalk/source/css/common.css
+++ b/2304_apptalk/source/css/common.css
@@ -639,7 +639,7 @@ container
   height: 100%;
   min-height: 64px;
   padding: 8px 0;
-  border: 1px solid #00f;
+  border: 1px solid #0f0;
 }
 
 .wrapper.apptalk_list section.sec_list ul li .list .imgBox img {
