--- a/2304_apptalk/source/css/common.css
+++ b/2304_apptalk/source/css/common.css
@@ -623,8 +623,13 @@ container
   /* 상세  */
 }
 
+.wrapper.apptalk_list section.sec_list ul li {
+  background-color: pink;
+}
+
 .wrapper.apptalk_list section.sec_list ul li a {
   display: block;
+  background-color: orange;
 }
 
 .wrapper.apptalk_list section.sec_list ul li .list {
@@ -640,6 +645,7 @@ container
   min-height: 64px;
   padding: 8px 0;
   border: 1px solid #0f0;
+  background-color: green;
 }
 
 .wrapper.apptalk_list section.sec_list ul li .list .imgBox img {
