--- a/2304_apptalk/source/css/common.css
+++ b/2304_apptalk/source/css/common.css
@@ -641,8 +641,7 @@ container
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
-  height: 100%;
-  min-height: 64px;
+  height: 64px;
   padding: 8px 0;
   border: 1px solid #0f0;
   background-color: green;
