--- a/2304_apptalk/source/css/common.css
+++ b/2304_apptalk/source/css/common.css
@@ -623,10 +623,6 @@ container
   /* 상세  */
 }
 
-.wrapper.apptalk_list section.sec_list ul li {
-  background-color: pink;
-}
-
 .wrapper.apptalk_list section.sec_list ul li a {
   display: block;
 }
@@ -642,7 +638,6 @@ container
   width: 100%;
   height: 64px;
   padding: 8px 0;
-  background-color: green;
 }
 
 .wrapper.apptalk_list section.sec_list ul li .list .imgBox img {
@@ -654,7 +649,6 @@ container
 }
 
 .wrapper.apptalk_list section.sec_list ul li .list .textBox {
-  background-color: blue;
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
@@ -705,13 +699,22 @@ container
 
 .wrapper.apptalk_list section.sec_list ul li .list .alarmBox p:nth-child(2) {
   font-family: "NotoSansM";
+  position: relative;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-size: 8px;
   color: #ffffff;
   text-align: center;
   letter-spacing: -0.16px;
   min-width: 16px;
   min-height: 16px;
-  padding: 3px 0 0 0;
   border-radius: 100%;
   background-color: #6341b3;
 }
