--- a/2304_apptalk/source/css/common.css
+++ b/2304_apptalk/source/css/common.css
@@ -466,7 +466,7 @@ header {
   width: 100vw;
   height: 96px;
   top: 0;
-  padding: 0 16px;
+  padding: 0 10px;
   background-color: #ffffff;
   z-index: 100;
 }
@@ -480,7 +480,7 @@ header > .title {
       -ms-flex-align: center;
           align-items: center;
   height: 55px;
-  padding: 4px 4px;
+  padding: 0;
 }
 
 header > .title button.back {
@@ -499,15 +499,19 @@ header > .title button.back {
   position: relative;
   display: inline-block;
   margin: auto 0;
-  padding: 14px;
+  padding: 15px;
+  width: 30px;
 }
 
 header > .title h1 {
   font-family: "NotoSansB";
   position: relative;
   display: inline-block;
-  margin: 0 0 0 14px;
-  padding: 0 10px;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  margin: 0 0 0 8px;
+  padding: 0;
   font-size: 18px;
   color: #222222;
 }
