--- a/2304_apptalk/source/scss/_layout.scss
+++ b/2304_apptalk/source/scss/_layout.scss
@@ -2,7 +2,7 @@
 
 /*---------------------------------
     File   : layout.scss
-    Date   : 2023.04.04
+    Date   : 2023.04.13
 /*---------------------------------*/
 
 /* 
@@ -29,7 +29,6 @@ wrapper
   width: 100%;
   min-height: 100vh;
   min-width: 280px;
-  // min-height: -webkit-fill-available;
 }
 
 
@@ -43,7 +42,7 @@ header {
   width: 100vw;
   height: 96px;
   top: 0;
-  padding: 0 16px;
+  padding: 0 10px;
   background-color: $white;
   z-index: 100;
 
@@ -52,7 +51,7 @@ header {
     display: flex;
     align-items: center;
     height: 55px;
-    padding: 4px 4px;
+    padding: 0;
 
     button {
       &.back {
@@ -62,8 +61,8 @@ header {
         position: relative;
         display: inline-block;
         margin: auto 0;
-        padding: 14px;
-        // border: 1px solid #f00;
+        padding: 15px;
+        width: 30px;
       }
     }
 
@@ -71,11 +70,11 @@ header {
       @include ftB;
       position: relative;
       display: inline-block;
-      margin: 0 0 0 14px;
-      padding: 0 10px;
+      flex-grow: 1;
+      margin: 0 0 0 8px;
+      padding: 0;
       font-size: 18px;
       color: $fontColor;
-      // border: 1px solid #f00;
 
       i {
         &.apptalk {
@@ -83,17 +82,6 @@ header {
           @include ico_apptalk;
           vertical-align: middle;
           margin-right: 10px;
-
-          // &:before {
-          //   content: "";
-          //   position: relative;
-          //   display: inline-block;
-          //   width: 36px;
-          //   height: 36px;
-          //   border-radius: 60px;
-          //   background-color: $white;
-          //   box-shadow: 0px 2px 6px 0 rgba(0, 0, 0, 0.04);
-          // }
         }
       }
     }
@@ -123,7 +111,7 @@ navigation
       display: inline-flex;
       align-items: center;
       height: 100%;
-      margin-left: 22px;
+      margin-left: 10px;
       vertical-align: middle;
 
       &:first-child {
@@ -136,7 +124,7 @@ navigation
         position: relative;
         display: block;
         margin: 0 auto;
-        padding: 0 10px;
+        padding: 0 6px;
         font-size: 20px;
         letter-spacing: -0.32px;
         color: $gnbDefalutFontColor;
@@ -148,7 +136,7 @@ navigation
           width: 6px;
           height: 6px;
           top: -3px;
-          right: 4px;
+          right: 0px;
           border-radius: 100%;
           background-color: $pointColor;
         }
