--- a/work/2408_permission_guide/css/common.css
+++ b/work/2408_permission_guide/css/common.css
@@ -1710,6 +1710,22 @@ Date   : 2024.08.20
   min-height: 50px;
 }
 
+.wrap.pm_guideGift .content section.sec_guide .cont ul li p, .wrap.pm_guideGiftNumber .content section.sec_guide .cont ul li p {
+  display: inline-block;
+}
+
+.wrap.pm_guideGift .content section.sec_guide .cont ul li p:before, .wrap.pm_guideGiftNumber .content section.sec_guide .cont ul li p:before {
+  content: "";
+  position: absolute;
+  display: inline-block;
+  width: 2px;
+  min-height: 12px;
+  height: calc(100% - 40px);
+  top: 44px;
+  left: 20px;
+  background-color: #e1e6eb;
+}
+
 .wrap.pm_guideGift .content section.sec_guide .cont ul li:before, .wrap.pm_guideGiftNumber .content section.sec_guide .cont ul li:before {
   content: "";
   position: relative;
@@ -1725,16 +1741,8 @@ Date   : 2024.08.20
   margin: 10px 0 0 0;
 }
 
-.wrap.pm_guideGift .content section.sec_guide .cont ul li:not(:last-child):after, .wrap.pm_guideGiftNumber .content section.sec_guide .cont ul li:not(:last-child):after {
-  content: "";
-  position: absolute;
-  display: inline-block;
-  width: 2px;
-  min-height: 12px;
-  height: calc(100% - 40px);
-  top: 44px;
-  left: 20px;
-  background-color: #e1e6eb;
+.wrap.pm_guideGift .content section.sec_guide .cont ul li:last-child p:before, .wrap.pm_guideGiftNumber .content section.sec_guide .cont ul li:last-child p:before {
+  display: none;
 }
 
 .wrap.pm_guideGift .content section.sec_guide .cont ul li:nth-child(1):before, .wrap.pm_guideGiftNumber .content section.sec_guide .cont ul li:nth-child(1):before {
