--- a/work/2408_permission_guide/css/common.css
+++ b/work/2408_permission_guide/css/common.css
@@ -1710,11 +1710,7 @@ Date   : 2024.08.20
   min-height: 50px;
 }
 
-.wrap.pm_guideGift .content section.sec_guide .cont ul li p, .wrap.pm_guideGiftNumber .content section.sec_guide .cont ul li p {
-  display: inline-block;
-}
-
-.wrap.pm_guideGift .content section.sec_guide .cont ul li p:before, .wrap.pm_guideGiftNumber .content section.sec_guide .cont ul li p:before {
+.wrap.pm_guideGift .content section.sec_guide .cont ul li:before, .wrap.pm_guideGiftNumber .content section.sec_guide .cont ul li:before {
   content: "";
   position: absolute;
   display: inline-block;
@@ -1726,7 +1722,11 @@ Date   : 2024.08.20
   background-color: #e1e6eb;
 }
 
-.wrap.pm_guideGift .content section.sec_guide .cont ul li:before, .wrap.pm_guideGiftNumber .content section.sec_guide .cont ul li:before {
+.wrap.pm_guideGift .content section.sec_guide .cont ul li p, .wrap.pm_guideGiftNumber .content section.sec_guide .cont ul li p {
+  display: inline-block;
+}
+
+.wrap.pm_guideGift .content section.sec_guide .cont ul li p:before, .wrap.pm_guideGiftNumber .content section.sec_guide .cont ul li p:before {
   content: "";
   position: relative;
   display: inline-block;
@@ -1745,7 +1745,7 @@ Date   : 2024.08.20
   display: none;
 }
 
-.wrap.pm_guideGift .content section.sec_guide .cont ul li:nth-child(1):before, .wrap.pm_guideGiftNumber .content section.sec_guide .cont ul li:nth-child(1):before {
+.wrap.pm_guideGift .content section.sec_guide .cont ul li:nth-child(1) p:before, .wrap.pm_guideGiftNumber .content section.sec_guide .cont ul li:nth-child(1) p:before {
   background: url("../image/component/ico_shopping.png") no-repeat center;
   width: 40px;
   height: 40px;
