--- a/work/2408_permission_guide/css/common.css
+++ b/work/2408_permission_guide/css/common.css
@@ -1716,10 +1716,16 @@ Date   : 2024.08.20
   display: inline-block;
   width: 2px;
   min-height: 12px;
-  height: calc(100% - 40px);
+  height: calc(100svh - 40px);
   top: 44px;
   left: 20px;
   background-color: #e1e6eb;
+}
+
+@supports (-webkit-appearance: none) and (stroke-color: transparent) {
+  .wrap.pm_guideGift .content section.sec_guide .cont ul li:before, .wrap.pm_guideGiftNumber .content section.sec_guide .cont ul li:before {
+    min-height: -webkit-fill-available;
+  }
 }
 
 .wrap.pm_guideGift .content section.sec_guide .cont ul li p, .wrap.pm_guideGiftNumber .content section.sec_guide .cont ul li p {
