--- a/work/2408_permission_guide/css/common.css
+++ b/work/2408_permission_guide/css/common.css
@@ -1724,7 +1724,7 @@ Date   : 2024.08.20
 
 @supports (-webkit-appearance: none) and (stroke-color: transparent) {
   .wrap.pm_guideGift .content section.sec_guide .cont ul li:before, .wrap.pm_guideGiftNumber .content section.sec_guide .cont ul li:before {
-    min-height: -webkit-fill-available;
+    height: -webkit-fill-available;
   }
 }
 
