--- a/work/2408_permission_guide/css/common.css
+++ b/work/2408_permission_guide/css/common.css
@@ -1708,6 +1708,14 @@ Date   : 2024.08.20
   font-family: "Pretendard_Bold";
   position: relative;
   min-height: 50px;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .wrap.pm_guideGift .content section.sec_guide .cont ul li:before, .wrap.pm_guideGiftNumber .content section.sec_guide .cont ul li:before {
@@ -1717,15 +1725,16 @@ Date   : 2024.08.20
   width: 2px;
   min-height: 12px;
   height: calc(100svh - 40px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  height: calc(100% - 50px);
   top: 44px;
   left: 20px;
   background-color: #e1e6eb;
-}
-
-@supports (-webkit-appearance: none) and (stroke-color: transparent) {
-  .wrap.pm_guideGift .content section.sec_guide .cont ul li:before, .wrap.pm_guideGiftNumber .content section.sec_guide .cont ul li:before {
-    height: -webkit-fill-available;
-  }
 }
 
 .wrap.pm_guideGift .content section.sec_guide .cont ul li p, .wrap.pm_guideGiftNumber .content section.sec_guide .cont ul li p {
