--- a/work/2408_permission_guide/css/common.css
+++ b/work/2408_permission_guide/css/common.css
@@ -1718,25 +1718,6 @@ Date   : 2024.08.20
           flex-direction: column;
 }
 
-.wrap.pm_guideGift .content section.sec_guide .cont ul li:before, .wrap.pm_guideGiftNumber .content section.sec_guide .cont ul li:before {
-  content: "";
-  position: absolute;
-  display: inline-block;
-  width: 2px;
-  min-height: 12px;
-  height: calc(100svh - 40px);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-  height: calc(100% - 50px);
-  top: 44px;
-  left: 20px;
-  background-color: #e1e6eb;
-}
-
 .wrap.pm_guideGift .content section.sec_guide .cont ul li p, .wrap.pm_guideGiftNumber .content section.sec_guide .cont ul li p {
   display: inline-block;
 }
@@ -1770,6 +1751,9 @@ Date   : 2024.08.20
 .wrap.pm_guideGift .content section.sec_guide .cont ul li:nth-child(1) .prodDetail, .wrap.pm_guideGiftNumber .content section.sec_guide .cont ul li:nth-child(1) .prodDetail {
   padding: 0 0 5px 0;
   height: -webkit-fill-available;
+  border-left: 2px solid #f00;
+  margin: 10px 0 0 20px;
+  padding: 0 0 5px 20px;
 }
 
 .wrap.pm_guideGift .content section.sec_guide .cont ul li:nth-child(1) .prodDetail.brdNone img, .wrap.pm_guideGiftNumber .content section.sec_guide .cont ul li:nth-child(1) .prodDetail.brdNone img {
@@ -1781,7 +1765,6 @@ Date   : 2024.08.20
   width: 260px;
   max-width: 80%;
   height: 100%;
-  margin: 10px 0 0 40px;
   border-radius: 8px;
   border: 1px solid #e1e6eb;
 }
