--- a/work/2408_permission_guide/css/common.css
+++ b/work/2408_permission_guide/css/common.css
@@ -511,7 +511,7 @@ Date   : 2024.08.20
   display: inline-block;
   width: 2px;
   min-height: 12px;
-  height: -webkit-fill-available;
+  height: calc(100% - 40px);
   top: 44px;
   left: 20px;
   background-color: #e1e6eb;
@@ -525,7 +525,9 @@ Date   : 2024.08.20
 }
 
 .wrap.pm_guidePlace .content section.sec_guide .cont ul li:nth-child(1) .prodDetail {
-  padding: 0 0 5px 0;
+  height: auto;
+  margin: 10px 0 0 20px;
+  padding: 0 0 5px 40px;
 }
 
 .wrap.pm_guidePlace .content section.sec_guide .cont ul li:nth-child(1) .prodDetail.brdNone img {
@@ -536,8 +538,7 @@ Date   : 2024.08.20
 .wrap.pm_guidePlace .content section.sec_guide .cont ul li:nth-child(1) .prodDetail img {
   width: 260px;
   max-width: 80%;
-  height: 100%;
-  margin: 10px 0 0 40px;
+  height: auto;
   border-radius: 8px;
   border: 1px solid #e1e6eb;
 }
@@ -1109,8 +1110,9 @@ Date   : 2024.08.20
 }
 
 .wrap.pm_guideQuiz .content section.sec_guide .cont ul li:nth-child(1) .prodDetail {
-  padding: 0 0 5px 0;
-  height: -webkit-fill-available;
+  height: auto;
+  margin: 10px 0 0 20px;
+  padding: 0 0 5px 40px;
 }
 
 .wrap.pm_guideQuiz .content section.sec_guide .cont ul li:nth-child(1) .prodDetail.brdNone img {
@@ -1119,10 +1121,9 @@ Date   : 2024.08.20
 }
 
 .wrap.pm_guideQuiz .content section.sec_guide .cont ul li:nth-child(1) .prodDetail img {
-  max-width: 80%;
   width: 260px;
-  height: 100%;
-  margin: 10px 0 0 40px;
+  max-width: 80%;
+  height: auto;
   border-radius: 8px;
   border: 1px solid #e1e6eb;
 }
@@ -1746,7 +1747,6 @@ Date   : 2024.08.20
 }
 
 .wrap.pm_guideGift .content section.sec_guide .cont ul li:nth-child(1) .prodDetail, .wrap.pm_guideGiftNumber .content section.sec_guide .cont ul li:nth-child(1) .prodDetail {
-  min-height: 12px;
   height: auto;
   margin: 10px 0 0 20px;
   padding: 0 0 5px 40px;
@@ -1773,7 +1773,6 @@ Date   : 2024.08.20
 }
 
 .wrap.pm_guideGift .content section.sec_guide .cont ul li:nth-child(2) .prodDetail, .wrap.pm_guideGiftNumber .content section.sec_guide .cont ul li:nth-child(2) .prodDetail {
-  min-height: 12px;
   height: auto;
   margin: 10px 0 0 20px;
   padding: 0 0 5px 40px;
