--- a/work/2408_permission_guide/css/common.css
+++ b/work/2408_permission_guide/css/common.css
@@ -2,8 +2,8 @@
 /*
 Explain : permission 
 File : common.scss 
-Date : 2024.08.22
-Version : 1.1.10
+Date : 2024.08.27
+Version : 1.1.11
 */
 /*
 z-index 순서
@@ -361,7 +361,7 @@ select {
 
 /*
 File   : guide.scss
-Date   : 2024.08.20
+Date   : 2024.08.27
 */
 .wrap.pm_guidePlace .title {
   display: -webkit-box;
@@ -859,12 +859,20 @@ Date   : 2024.08.20
   height: auto;
 }
 
-.wrap.pm_guidePlace .content section.sec_report {
+.wrap.pm_guidePlace footer {
+  position: -webkit-sticky;
+  position: sticky;
+  width: 100%;
+  bottom: 0;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0 -2px 10px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 -2px 10px 0 rgba(0, 0, 0, 0.1);
+}
+
+.wrap.pm_guidePlace footer .guide {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   -webkit-box-orient: initial;
   -webkit-box-direction: initial;
       -ms-flex-direction: initial;
@@ -875,60 +883,50 @@ Date   : 2024.08.20
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: 10px;
-  margin: 1px 0 0 0;
-}
-
-.wrap.pm_guidePlace .content section.sec_report p {
-  font-size: 16px;
-}
-
-.wrap.pm_guidePlace .content section.sec_report p:before {
-  content: "";
+  gap: 50px;
   position: relative;
-  display: inline-block;
-  background-position: 0px 0px;
-  font-size: 0;
-  font-style: normal;
-  vertical-align: middle;
-  background: url("../image/component/ico_q.svg") no-repeat center;
-  width: 16px;
-  height: 16px;
-  background-size: contain;
-  content: "";
-  top: -2px;
-  vertical-align: middle;
-  margin: 0 8px 0 0;
-}
-
-.wrap.pm_guidePlace .content section.sec_report a {
-  font-family: "Pretendard_Medium";
-  font-weight: normal;
-  margin: 0 0 0 auto;
-  color: #2f84fc;
-  text-decoration: underline;
-}
-
-.wrap.pm_guidePlace footer {
-  position: -webkit-sticky;
-  position: sticky;
-  width: 100%;
-  bottom: 0;
-  background-color: #f1f4f6;
-}
-
-.wrap.pm_guidePlace footer .guide {
-  position: relative;
-  text-align: center;
+  text-align: left;
+  padding: 18px 20px;
 }
 
 .wrap.pm_guidePlace footer .guide p {
-  line-height: 22px;
+  margin: 0 0 0 10px;
+  line-height: 18px;
+  font-size: 13px;
+  color: #7d838d;
+  text-indent: -10px;
   word-break: auto-phrase;
 }
 
-.wrap.pm_guidePlace footer .guide p b {
-  font-family: "Pretendard_Bold";
+.wrap.pm_guidePlace footer .guide button.report {
+  font-family: "Pretendard_Light";
+  font-weight: normal;
+  font-size: 16px;
+  text-align: center;
+  border-radius: 8px;
+  color: #2f84fc;
+  border: 1px solid #eaf2fe;
+  background-color: #eaf2fe;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-orient: initial;
+  -webkit-box-direction: initial;
+      -ms-flex-direction: initial;
+          flex-direction: initial;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 10px;
+  position: relative;
+  min-width: 64px;
+  height: 28px;
+  padding: 8px 6px;
+  font-size: 13px;
+  border-radius: 14px;
 }
 
 .wrap.pm_guidePlace footer button.upload {
@@ -1438,56 +1436,6 @@ Date   : 2024.08.20
   height: auto;
 }
 
-.wrap.pm_guideQuiz .content section.sec_report {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-orient: initial;
-  -webkit-box-direction: initial;
-      -ms-flex-direction: initial;
-          flex-direction: initial;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 10px;
-  margin: 1px 0 0 0;
-}
-
-.wrap.pm_guideQuiz .content section.sec_report p {
-  font-size: 16px;
-}
-
-.wrap.pm_guideQuiz .content section.sec_report p:before {
-  content: "";
-  position: relative;
-  display: inline-block;
-  background-position: 0px 0px;
-  font-size: 0;
-  font-style: normal;
-  vertical-align: middle;
-  background: url("../image/component/ico_q.svg") no-repeat center;
-  width: 16px;
-  height: 16px;
-  background-size: contain;
-  content: "";
-  top: -2px;
-  vertical-align: middle;
-  margin: 0 8px 0 0;
-}
-
-.wrap.pm_guideQuiz .content section.sec_report a {
-  font-family: "Pretendard_Medium";
-  font-weight: normal;
-  margin: 0 0 0 auto;
-  color: #2f84fc;
-  text-decoration: underline;
-}
-
 .wrap.pm_guideQuiz footer {
   position: -webkit-sticky;
   position: sticky;
@@ -1500,15 +1448,62 @@ Date   : 2024.08.20
 }
 
 .wrap.pm_guideQuiz footer .guide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: initial;
+  -webkit-box-direction: initial;
+      -ms-flex-direction: initial;
+          flex-direction: initial;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 50px;
   position: relative;
   text-align: left;
 }
 
 .wrap.pm_guideQuiz footer .guide p {
-  line-height: 22px;
-  word-break: auto-phrase;
-  color: #7d838d;
+  margin: 0 0 0 10px;
+  line-height: 18px;
   font-size: 13px;
+  color: #7d838d;
+  text-indent: -10px;
+  word-break: auto-phrase;
+}
+
+.wrap.pm_guideQuiz footer .guide button.report {
+  font-family: "Pretendard_Light";
+  font-weight: normal;
+  font-size: 16px;
+  text-align: center;
+  border-radius: 8px;
+  color: #2f84fc;
+  border: 1px solid #eaf2fe;
+  background-color: #eaf2fe;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-orient: initial;
+  -webkit-box-direction: initial;
+      -ms-flex-direction: initial;
+          flex-direction: initial;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 10px;
+  position: relative;
+  min-width: 64px;
+  height: 28px;
+  padding: 8px 6px;
+  font-size: 13px;
+  border-radius: 14px;
 }
 
 .wrap.pm_guideQuiz footer .inputSave {
@@ -2161,56 +2156,6 @@ Date   : 2024.08.20
   background-position: 0 0;
 }
 
-.wrap.pm_guideGift .content section.sec_report, .wrap.pm_guideGiftNumber .content section.sec_report {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-orient: initial;
-  -webkit-box-direction: initial;
-      -ms-flex-direction: initial;
-          flex-direction: initial;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 10px;
-  margin: 1px 0 0 0;
-}
-
-.wrap.pm_guideGift .content section.sec_report p, .wrap.pm_guideGiftNumber .content section.sec_report p {
-  font-size: 16px;
-}
-
-.wrap.pm_guideGift .content section.sec_report p:before, .wrap.pm_guideGiftNumber .content section.sec_report p:before {
-  content: "";
-  position: relative;
-  display: inline-block;
-  background-position: 0px 0px;
-  font-size: 0;
-  font-style: normal;
-  vertical-align: middle;
-  background: url("../image/component/ico_q.svg") no-repeat center;
-  width: 16px;
-  height: 16px;
-  background-size: contain;
-  content: "";
-  top: -2px;
-  vertical-align: middle;
-  margin: 0 8px 0 0;
-}
-
-.wrap.pm_guideGift .content section.sec_report a, .wrap.pm_guideGiftNumber .content section.sec_report a {
-  font-family: "Pretendard_Medium";
-  font-weight: normal;
-  margin: 0 0 0 auto;
-  color: #2f84fc;
-  text-decoration: underline;
-}
-
 .wrap.pm_guideGift footer, .wrap.pm_guideGiftNumber footer {
   position: -webkit-sticky;
   position: sticky;
@@ -2223,15 +2168,62 @@ Date   : 2024.08.20
 }
 
 .wrap.pm_guideGift footer .guide, .wrap.pm_guideGiftNumber footer .guide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: initial;
+  -webkit-box-direction: initial;
+      -ms-flex-direction: initial;
+          flex-direction: initial;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 50px;
   position: relative;
   text-align: left;
 }
 
 .wrap.pm_guideGift footer .guide p, .wrap.pm_guideGiftNumber footer .guide p {
-  line-height: 22px;
-  word-break: auto-phrase;
-  color: #7d838d;
+  margin: 0 0 0 10px;
+  line-height: 18px;
   font-size: 13px;
+  color: #7d838d;
+  text-indent: -10px;
+  word-break: auto-phrase;
+}
+
+.wrap.pm_guideGift footer .guide button.report, .wrap.pm_guideGiftNumber footer .guide button.report {
+  font-family: "Pretendard_Light";
+  font-weight: normal;
+  font-size: 16px;
+  text-align: center;
+  border-radius: 8px;
+  color: #2f84fc;
+  border: 1px solid #eaf2fe;
+  background-color: #eaf2fe;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-orient: initial;
+  -webkit-box-direction: initial;
+      -ms-flex-direction: initial;
+          flex-direction: initial;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 10px;
+  position: relative;
+  min-width: 64px;
+  height: 28px;
+  padding: 8px 6px;
+  font-size: 13px;
+  border-radius: 14px;
 }
 
 .wrap.pm_guideGift footer .inputSave, .wrap.pm_guideGiftNumber footer .inputSave {
