--- a/work/2408_permission_guide/css/common.css
+++ b/work/2408_permission_guide/css/common.css
@@ -4,7 +4,7 @@ Explain : permission
 File : common.scss 
 Date : 2024.08.29
 Version : 1.1.12
-text : 1.3
+text : 1.4
 */
 /*
 z-index 순서
@@ -2430,7 +2430,6 @@ Date   : 2024.08.29
   display: block;
   margin-top: 8px;
   font-size: 16px;
-  font-size: clamp(100%, 16px, 120%);
   -webkit-text-size-adjust: none;
   -moz-text-size-adjust: none;
   -ms-text-size-adjust: none;
@@ -2439,7 +2438,7 @@ Date   : 2024.08.29
 
 .wrap.pm_guideRewardBM .content section.sec_guide .tit p:nth-child(2), .wrap.pm_guideRewardCE .content section.sec_guide .tit p:nth-child(2) {
   color: #7d838d;
-  color: red;
+  color: blue;
 }
 
 .wrap.pm_guideRewardBM .content section.sec_guide .cont, .wrap.pm_guideRewardCE .content section.sec_guide .cont {
@@ -2449,6 +2448,7 @@ Date   : 2024.08.29
 .wrap.pm_guideRewardBM .content section.sec_guide .cont ul li, .wrap.pm_guideRewardCE .content section.sec_guide .cont ul li {
   font-family: "Pretendard_Bold";
   position: relative;
+  font-size: 16px;
 }
 
 .wrap.pm_guideRewardBM .content section.sec_guide .cont ul li:before, .wrap.pm_guideRewardCE .content section.sec_guide .cont ul li:before {
