--- a/work/2408_permission_guide/css/common.css
+++ b/work/2408_permission_guide/css/common.css
@@ -4,7 +4,7 @@ Explain : permission
 File : common.scss 
 Date : 2024.08.29
 Version : 1.1.12
-text : 1.8
+text : 1.10
 */
 /*
 z-index 순서
@@ -162,7 +162,7 @@ video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font-size: clamp(100%, 16px, 120%);
+  font-size: clamp(16px);
   -webkit-text-size-adjust: none;
   -moz-text-size-adjust: none;
   -ms-text-size-adjust: none;
